Don't create a pidfile
It's not necessary with systemd and there's not somewhere sensible set up with the right permissions.

Also adding some standard JVM args.